--- a/source/jade/equipments-item.jade
+++ b/source/jade/equipments-item.jade
@@ -49,33 +49,27 @@ block append content
 									span.count 388
 						.iprev
 							img(src="img/content/equip-1.jpg", alt="")
-						p.grey-without-strong
-							strong Назначение <br>
-							| Изготовление деталей типа тел вращения
-						p.grey-without-strong
-							strong Описание <br>
-							| Прецизионный токарный станок с ЧПУ выполнен по прогрессивной схеме компоновки с расположением револьверной головки на наклонных направляющих, что увеличивает жесткость конструкции, позволяет уменьшить размеры станка по ширине и оптимально распределить по направляющим нагрузки, образующиеся в процессе резания.
-						p.grey-without-strong
-							strong Основные характеристики <br>
-							| Наибольший диаметр обрабатываемого изделия – 600 мм <br>Число управляемых координат – 2
-						p.grey-without-strong
-							strong Год выпуска: 
-							| 2012
-						p.grey-without-strong
-							strong Производитель: 
-							| SOMAB, Франция
-						p.grey-without-strong
-							strong Состоаяние: 
-							| новый
-						p.grey-without-strong
-							strong Порядок предоставления услуг по доступу к оборудованию: <br>
-							| Передача в собственность 
-						p.grey-without-strong
-							strong Организация (ВУЗ / ГНЦ): 
-							| Национальный исследовательский Томский политехнический университет
+					p.grey-without-strong
+						strong Назначение <br>
+						| Изготовление деталей типа тел вращения
+					p.grey-without-strong
+						strong Описание <br>
+						| Прецизионный токарный станок с ЧПУ выполнен по прогрессивной схеме компоновки с расположением револьверной головки на наклонных направляющих, что увеличивает жесткость конструкции, позволяет уменьшить размеры станка по ширине и оптимально распределить по направляющим нагрузки, образующиеся в процессе резания.
+					p.grey-without-strong
+						strong Основные характеристики <br>
+						| Наибольший диаметр обрабатываемого изделия – 600 мм <br>Число управляемых координат – 2
+					p.grey-without-strong
+						strong Год выпуска: 
+						| 2012
+					p.grey-without-strong
+						strong Производитель:
+						| SOMAB, Франция
+					p.grey-without-strong
+						strong Организация (ВУЗ / ГНЦ): 
+						| Национальный исследовательский Томский политехнический университет
 				.order-service-cont
-					a(href="#").btn-orange-wide.inline.js-open-coming-soon.width240 Заказать
-					a(href="#").btn-grey-dashed.js-show-contacts.width240 Показать контакты
+					a(href="#").btn-orange.inline.js-open-coming-soon Заказать
+					a(href="#").btn-grey-dashed.js-show-contacts Показать контакты
 					.contacts.js-contacts-box
 						span.phone +7 495 675 87 98
 						span.email
@@ -127,7 +121,7 @@ block append content
 											span.name Машиностроение
 											span.count.empty
 									.order-service
-										a(href="#").btn-orange.width175 Заказать
+										a(href="#").btn-orange Заказать
 									.imeta
 										.right.mar-top-20m
 											.comments
@@ -161,7 +155,7 @@ block append content
 											span.name Машиностроение
 											span.count.empty
 									.order-service
-										a(href="#").btn-orange.width175 Заказать
+										a(href="#").btn-orange Заказать
 									.imeta
 										.right.mar-top-20m
 											.comments
