--- a/source/jade/results-item.jade
+++ b/source/jade/results-item.jade
@@ -32,24 +32,39 @@ block append content
 					.event-item
 						.icon
 							h1.service-title Эскизные проекты вариантов роторов низкого давления тихоходной турбины
-							p.grey-without-strong
-								strong Исполнитель: 
-								| НИОКР ОАО НПО «ЦНИИТМАШ»
-							p.grey-without-strong
-								strong Вид РИД: 
-								| Секрет производства (
-								a(href="#") ноу-хау
-								|)
-							p.grey-without-strong
-								strong ФЦП: 
-								| «Национальная технологическая база» на 2007-2011 годы
-							p.grey-without-strong
-								strong Охранный документ: 
-								| в процессе регистрации
-								a(href="#").updade-black
-							p.grey-without-strong
-								strong Стоимость передачи РИД: 
-								| 240 000 рублей
+							.tags
+								a(href="#").tags-item
+									span.name Машиностроение
+									span.count.empty
+								a(href="#").tags-item
+									span.name Металлообработка
+									span.count 388
+							.con-dess-lines
+								p
+									strong Вид РИД: 
+									a(href="#") Изображение
+								p
+									strong Исполнитель: 
+									| Способ измерения модуля упругости кольцевых образцов (деталей), в основу которого положено измерение деформации при фиксированной нагрузке
+								p
+									strong Охранный документ: 
+									| Патент
+								p
+									strong Номер охранного документа: 
+									| №3421701 от 10.12.2011
+								p
+									strong Правообладатель: 
+									| Промстройинжиниринг
+								p
+									strong ФЦП: 
+									| «Национальная технологическая база» на 2007-2011 годы
+								p
+									strong Охранный документ: 
+									| в процессе регистрации
+									a(href="#").updade-black
+								p
+									strong Стоимость передачи РИД: 
+									| 240 000 рублей
 				.bmetabot
 					.share
 						span Поделиться
