--- a/source/jade/ntp.jade
+++ b/source/jade/ntp.jade
@@ -1,104 +1,81 @@
 extends _layout
 
-block title
-	| - Результаты
-	
-block scripts
-	script(src="js/jquery.supercal.js", type="text/javascript")
- 
- 
-//- Контент
 //------------------------------------------------
 block append content
 	.main-width.main-wrap
 		.pathway
 			ul
-				li: a(href="#") Рынок услуг
+				li: a(href="#") РЫНОК УСЛУГ
 				li >
-				li РЕЗУЛЬТАТЫ ИНТЕЛЛЕКТУАЛЬНОЙ ДЕЯТЕЛЬНОСТИ
-		//------------------------------------------------
+				li: a(href="#") объекты нтп 
 		.page-name
-			h1 РИД
-			p Рынок услуг в части результатов интеллектальной деятельности
+			h1 Объекты НТП
+			p Рынок услуг по инжинирингу и промдизайну
 		//------------------------------------------------
 		.main-left
 			.search-con
 				form(action="#")
-					input(type="text", placeholder="Быстрый поиск по РИДам").inp-text
+					input(type="text", placeholder="Быстрый поиск по объектам НТП").inp-text
 					input(type="submit", value="").inp-submit
 			.box-articles
 				.heading
 					.heading-left_sort Сортировать по:						
 					.heading-right_sort
-						a(href="#")
-							| Исполнителю
+						a(href="#").active 
+							| Пользовательскому рейтингу 
 							span
 						a(href="#") 
 							| Названию организации
 							span 
-				mixin item(name)
+				+item("Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527 ", "180-135-3.jpg")
+				+item("Автомат установки компонентов: АРС L40 ", "180-135-4.jpg")
+				+item("Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527 ", "180-135-3.jpg")
+				+item("Автомат установки компонентов: АРС L40 ", "180-135-4.jpg")
+				mixin item(name, pic)
 					.item
+						.iprev
+							img(src="img/content/#{pic}", alt="")
 						.icon
 							.iname
-								a(href="#") Эскизные проекты вариантов роторов низкого давления тихоходной турбины <br>мощностью выше 1200 МВт с двумя ЦНД
-							.itext.lh-small.black-strong
-								p
-									strong Вид РИД: 
-									a(href="#") Изображение
-								p
-									strong Исполнитель: 
-									| Способ измерения модуля упругости кольцевых образцов (деталей), в основу которого положено измерение деформации при фиксированной нагрузке
-								p
-									strong Охранный документ: 
-									| Патент
-								p
-									strong Номер охранного документа: 
-									| №3421701 от 10.12.2011
-								p
-									strong Правообладатель: 
-									| Промстройинжиниринг
-								p
-									strong ФЦП: 
-									| «Национальная технологическая база» на 2007-2011 годы
-								p
-									strong Охранный документ: 
-									| в процессе регистрации
-									a(href="#").updade-black
-								p
-									strong Стоимость передачи РИД: 
-									| 240 000 рублей
+								a(href="#")= name 
+							.irating.mar-bot-10
+								ul
+									li.star
+									li.star
+									li.star
+									li
+									li
+							.itext 
+								.con-dess-lines_small
+									p
+										strong Организация (ВУЗ / ГНЦ): 
+										| Национальный исследовательский Томский политехнический университет
+									p
+										strong Содержание: 
+										| текст
+									p
+										strong Основные характеристики: 
+										| текст
+									p
+										strong Порядок получения услуг: 
+										| получение в собственность
 							.tags
 								a(href="#").tags-item
-									span.name Выставки
+									span.name Металлообратобка
 									span.count 12
 								a(href="#").tags-item
 									span.name Машиностроение
 									span.count.empty
+							.order-service
+								a(href="#").btn-orange Заказать НТП
 							.imeta
 								.right.mar-top-20m
 									.comments
 										a(href="#") 51
 									.views
 										a(href="#") 225
-				+item()
-				+item()
-				+item()
-				+item()
 		//------------------------------------------------
 		.main-right
-			.box-right
-				.bname
-					h3 Виды рид
-				.bcon
-					ul
-						li: a(href="#") Изобретение
-						li: a(href="#") Полезная модель
-						li: a(href="#") Промышленный образец
-						li: a(href="#") Программа для ЭВМ
-						li: a(href="#") База данных
-						li: a(href="#") Селекционное достижение
-						li: a(href="#") Топология интегральных микросхем
-						li: a(href="#") Ноу-хау
 			.box-right.boxside-sort-cat
 				.bname
 					h3 Области применения
