--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -4,7 +4,7 @@
 
 
 min-height = "screen and (min-height: 768px)"
-min-width = "screen and (max-width 1400px)"
+min-width = "screen and (max-width 1350px)"
 
 
 body
@@ -155,12 +155,7 @@ i
 .btn-center-or
 	color-orange()
 	display inline-block
-.width240
-	width 240px
-	full() 
-.width175
-	width 175px
-	full() 
+	
 	
 
 //	TEXT
@@ -173,12 +168,7 @@ color-orange()
 	font-size 14px
 .fz11
 	font-size 11px
-.text_lh16
-	line-height 16px
-	margin-bottom 0
-	p
-		line-height 16px
-		margin-bottom 10px
+	
 .textarea-full
 	full() 
 	width 100%
@@ -238,7 +228,7 @@ color-orange()
 //	ЛЕВАЯ КОЛОНКА
 // ===============================================
 .sidebar
-	z-index 101;
+	z-index 70;
 	width 200px; 
 	height 100%; 
 	background-color #F85800
@@ -405,9 +395,17 @@ color-orange()
 //	ВЕРХНЕЕ МЕНЮ
 // ===============================================
 .topper
-	position fixed; left 0; top 0; width 100%; min-width 1000px; full(); height 63px; padding-left 200px; 
-	z-index 100; overflow hidden;
-	background #f76719; clearfix();
+	position fixed
+	left 0
+	top 0
+	width 100%
+	min-width 1000px
+	full()
+	height 63px
+	padding-left 200px
+	z-index 69
+	background #f76719
+	clearfix()
 	.main-width
 		max-width 100%;
 	.menu
@@ -426,11 +424,15 @@ color-orange()
 				a
 					color #333
 	.user
+		position relative
 		float right;
-		background #333;
+		background #333
+		&:hover
+			cursor pointer
 		clearfix(); 
 		.name
-			float left; padding 15px 25px 25px 30px;
+			height 48px
+			float left; padding 15px 25px 0 30px;
 			font-size 14px; 
 			color #eee;
 			a
@@ -457,8 +459,71 @@ color-orange()
 					border-radius 50%;
 					color #fff; tdn(); 
 					&:hover
-						color alpha(#fff, 0.7); 
-			
+						color alpha(#fff, 0.7);
+		.arrow
+			z-index 10
+			position absolute 
+			right -27px 
+			top 20px
+			width 6px
+			height 7px
+			background url("../img/m-arrow.png") no-repeat
+			opacity .7
+			transform rotate(270deg)
+			anim()
+		.arrow.open
+			transform rotate(90deg)
+.user-drop
+	display none
+	z-index 9
+	position absolute 
+	left 0px 
+	top 63px
+	width 100%
+	full() 
+	background #444444
+	lino()
+	&__link
+		position relative
+		border-bottom 1px solid #323232
+		opacity .7
+		anim()
+		&:hover
+			opacity 1
+			background-color #505050
+		&:last-child
+			border-bottom none
+		
+		&_work
+			background url("../img/m-edit.png") 17px 25px no-repeat
+		&_request
+			background url("../img/m-request.png") 17px 25px no-repeat
+		&_messages
+			background url("../img/m-talks.png") 17px 25px no-repeat
+		&_notifyc
+			background url("../img/m-notification.png") 17px 25px no-repeat
+		
+		a
+			display block
+			padding 25px 0px 25px 50px
+			color #fff
+			font-size 14px
+			tdn() 
+			background url("../img/m-arrow.png") 230px 30px no-repeat
+		.count
+			display inline-block
+			margin-bottom -5px
+			margin-left 10px
+			background #f85800
+			border-radius 100%
+			i
+				display table-cell 
+				width 20px
+				height 20px
+				font-size 12px
+				text-align center
+				vertical-align middle
+		
 
 //	ОСНОВНОЙ КОНТЕНТ
 // ===============================================
@@ -526,13 +591,13 @@ color-orange()
 			a
 				border-bottom none; 
 .page-name
+	width 80%
 	padding-bottom 40px;
 	latolight();
 	h1
 		margin 0;
 		font-size 72px; latolight();
 	p
-		width 80%
 		margin 0; latolight(); font-size 18px; 
 .main-left
 	width 75%; display table-cell;
@@ -655,6 +720,9 @@ color-orange()
 				opacity 0.7;
 		li.star
 			background-position -14px 0;
+.irating_sm
+	ul li
+		margin-right 2px
 .irating-service
 	width 450px
 	padding-bottom 20px
@@ -762,7 +830,6 @@ img.full
 .order-service-cont
 	clearfix()
 	padding 20px 0
-	height 40px
 	> a
 		float left
 		padding 10px 40px	
@@ -1142,7 +1209,7 @@ a.link-orange
 
 
 .orders-box
-	z-index 12
+	z-index 3
 	position absolute 
 	left -1px 
 	top -30px
@@ -1444,7 +1511,7 @@ textarea.inp-full
 		background url("../img/ntp-up.png") no-repeat
 	&_orange
 		background url("../img/ntp-down.png") no-repeat
-	
+
 
 //	ИНФО-БЛОКИ ЛЕВОЙ КОЛОНКИ
 // ===============================================
@@ -1503,6 +1570,8 @@ textarea.inp-full
 					b
 						display block; 
 						regular(); color #333;
+				a.link-orange
+					@extend a.link-orange
 			.isuggest
 				a
 					display inline-block;
@@ -2023,7 +2092,6 @@ textarea.inp-full
 			li.selected
 				a
 					color #333;
-					font-weight 600
 
 .boxside-btns
 	padding-bottom 20px;
@@ -2559,12 +2627,20 @@ textarea.inp-full
 .col-4
 	display table-cell 
 	width 25%
-	padding 10px
+	vertical-align top
+.col-4_white
+	background #fff
+	border 1px solid #E5E5E5
+.col-4-sep
+	padding 0 5px
+	display table-cell
+.w33
+	width 33%
 
 .l-boxgrey
 	display none
 	position relative
-	padding 0 10px
+	padding 0 10px 20px 10px
 	margin 20px -20px -21px -20px
 	background #fafafa 
 	border 1px solid #E5E5E5
@@ -2578,6 +2654,8 @@ textarea.inp-full
 		width 30px
 		height 12px
 		background url("../img/sep-down.png") no-repeat
+	.row
+		padding 20px 20px 0px 20px
 	.boxgrey-name
 		padding 20px 0 5px 10px
 		clearfix() 
@@ -2601,14 +2679,18 @@ textarea.inp-full
 			text-transform uppercase
 			cursor pointer
 	.item-object
-		padding 10px 20px
-		background #fff
-		border 1px solid #E5E5E5
+		width 460px
+		full() 
+		display table-cell
+		height 100%
+		padding 10px
 		@extend .box-news .bcon .item
+		a.link-orange
+			@extend a.link-orange
 		.irating
 			padding 10px 0 5px 0
 	.show-more 
-		padding 20px 0
+		padding 20px 0 0 0
 		text-align center
 		text-transform uppercase
 		
@@ -3126,7 +3208,7 @@ footer
 		background url("../img/icons/close.png") no-repeat
 	.remodal
 		width auto
-		margin 0 auto
+		margin 50px auto
 		background #fff
 		padding 60px 40px
 		border 2px solid #1a1a1a
@@ -3780,7 +3862,7 @@ footer
 		&-images-list
 			lino()
 			display block
-			padding-right 100px
+			padding-right 300px
 			&-item
 				margin-left 19px!important
 				margin-bottom 15px !important
@@ -3831,3 +3913,98 @@ footer
 						background url(../img/icons/circular-add-h.png) no-repeat center
 					&:hover	&-text
 						color #999
+						
+//	#pops
+.order-accept
+	max-width 550px
+	&__name
+		color #333
+		font-size 24px
+		text-transform uppercase
+		padding-bottom 40px
+	&__text
+		padding-bottom 0px
+		color #333
+		font-size 14px
+		p
+			margin-bottom 10px
+
+//
+.popedit
+	width 700px
+	&__name
+		color #333
+		font-size 24px
+		text-transform uppercase
+		padding-bottom 40px
+	&__form
+		clearfix()
+		margin-bottom -50px
+		overflow hidden
+		
+
+//	#lineedit
+.lineedit
+	padding-bottom 25px
+	&_save
+		float right
+		margin-top -90px
+		text-align right
+		position relative
+	
+	&__name 
+		padding-bottom 10px
+		padding-left 10px
+		font-size 14px
+		font-weight 800
+		color #333
+		.req
+			display inline-block
+			color #f85800
+			padding-left 5px
+	
+	&__con
+		position relative
+		.desc
+			display inline-block
+			padding-left 10px
+			font-style italic
+		.articles__edit-images-list
+			margin-left -20px
+	
+	&__con_pad-left
+		@extend .lineedit__con
+		padding-left 10px
+	
+
+//	#inputs
+input.inp-field, textarea.text-field
+	full()
+	&:hover, &:focus
+		box-shadow 1px 1px 5px rgba(204, 204, 204, 0.75) inset
+input.inp-field_full, textarea.text-field_full
+	width 100%
+	padding 15px
+input.inp-field_500
+	width 500px
+input.inp-field_360
+	width 360px
+input.inp-field_70
+	width 70px
+input.inp-radio + label
+	font-size 14px
+	font-weight 400
+	
+
+//	#content	
+.con-dess-lines
+	p
+		color #999999
+		strong
+			color #333333
+.con-dess-lines_small
+	@extend .con-dess-lines 
+	p
+		margin-bottom 10px
+		strong
+			font-weight normal
